--- a/XmlTransform-Extension/MultipleConfigurationFileTransformer/package.json
+++ b/XmlTransform-Extension/MultipleConfigurationFileTransformer/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Git Version",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "description": "Transformation of others *.config files listed in web/app.config",
-  "author": "Jonathan Evain",
+  "author": "Mikael Krief",
   "license": "None",
   "devDependencies": {
     "vssts-task-sdk": "^0.5.0"
